# alvin-dennis.github.io

./: .gitignore  _config.yml  pyproject.toml  requirements.txt
_data/: contact.yml
_tabs/: about.md
admin/: auth.js  config.js  dashboard.js  index.htm  styles.css
api/: database.py  main.py  models.py
client/: _config.yml
client/_data/: contact.yml
