[tool.poetry]
name = "alvin-dennis-github-io"
version = "0.1.0"
description = ""
authors = ["winter_x64 <itswinterx64@gmail.com>"]
readme = "README.md"
packages = [{include = "alvin_dennis"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
databases = "^0.9.0"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
